appId: com.soen390.campusguide
---
- launchApp
- extendedWaitUntil:
    visible: "SGW Campus"
    timeout: 1800000

- assertVisible: "SGW Campus"

- tapOn: "Directions"
- waitForAnimationToEnd

- assertVisible:
    text: ".*mins.*km.*" 

- stopApp