appId: com.soen390.campusguide
---
- launchApp
- extendedWaitUntil:
    visible: "SGW Campus"
    timeout: 1800000

- assertVisible: "SGW Campus"

- tapOn: "SGW Campus"
- waitForAnimationToEnd

- tapOn:
    id: "poi-toggle-button"
- waitForAnimationToEnd

- tapOn:
    point: "30%,64%"
- waitForAnimationToEnd

- assertVisible: "FAST FOOD"

- tapOn: "Clear"
- waitForAnimationToEnd

- tapOn:
    id: "poi-toggle-button"
- waitForAnimationToEnd

- tapOn: "Loyola Campus"
- waitForAnimationToEnd

- tapOn:
    id: "poi-toggle-button"
- waitForAnimationToEnd

- tapOn:
    point: "90%,93%"
- waitForAnimationToEnd

- tapOn: "Loyola"
- waitForAnimationToEnd

- assertVisible: "Second Cup"

- assertVisible: "Found 29 places nearby"

- tapOn: "500m"
- waitForAnimationToEnd

- tapOn: "Map"
- waitForAnimationToEnd

- tapOn:
    point: "90%,93%"
- waitForAnimationToEnd

- assertVisible: "Found 13 places nearby"

- tapOn: "2km"
- waitForAnimationToEnd

- assertVisible: "Found 50 places nearby"

- swipe:
    direction: UP
    duration: 5000

- stopApp